# vasco

device/dpower/: .cvsignore  18f4550.lkr  ChangeLog  Makefile.am  README  application_iface.c  application_iface.h  boot_iface.c  boot_iface.h  configure.ac  debug.h  main.c  power_ep1.c  power_ep1.h  power_ep2.c  power_ep2.h  power_ep3.c  power_ep3.h  power_mgr.c  power_mgr.h  rtjobs.c  usb.c  usb.h  usb_descriptors.c  usb_descriptors.h
device/puf/: .cvsignore  ChangeLog  Makefile.am  README  config.sub  configure.ac
device/puf/application/: .cvsignore  18f4550.lkr  Makefile.am  application-18f4550-debug.lkr  application-18f4550.lkr  application_iface.c  application_iface.h  boot_iface.c  boot_iface.h  common_types.h  configure.ac  debug.h  main.c  usb_descriptors.c  usb_descriptors.h
device/puf/archives/: .cvsignore  Makefile.am  docker-1.2.tar.bz2  gputils-0.13.6.tar.bz2  gputils-0.13.7.tar.bz2  gputils-0.14.2.tar.bz2  libdev.diff  odyssey-0.5.1.tar.bz2  odyssey-0.6.tar.bz2  pic_list.diff  sdcc-src-2.7.0.tar.bz2  sdcc-src-2.8.0.tar.bz2  sdcc-src-2.9.0.tar.bz2  sdcc-src-20061112-4471.tar.bz2  sdcc-src-3.0.0.tar.bz2  ustatbits.diff
device/puf/bootloader/: .cvsignore  18f2550.lkr  18f4550.lkr  Makefile.am  am_config.h.in  application.c  application.h  application_iface.c  application_iface.h  boot_iface.c  boot_iface.h  boot_main.c  bootloader-18f4550-debug.lkr  bootloader-18f4550.lkr  common_types.h  config.c  config.h  debug.c  debug.h  dump_ttyS0.sh  ep0.c  ep0.h  ep1.c  ep1.h  ep2.c  ep2.h  flash.c  flash.h  flashmap.c  init_host.sh  interrupt_iface.c  usb.c  usb.h  usb_descriptors.c  usb_descriptors.h  usb_std_req.h  usbmon.sh
device/puf/bootloader/models/: pic_firmware.uml2  pic_firmware.uml2di  puf.uml  puf.uml2  puf.uml2di  puf.umldi
device/puf/include/: .cvsignore  Makefile.am  Makefile.in  application_config.h  application_debug.h  application_iface.h  boot_iface.h  common_types.h  debug.h  picon.h  rtjobs.h  rtjobs_template.c  sequencer.h  timer2.h  usb.h
device/puf/lib/: .cvsignore  Makefile.am  boot_iface.c  picon.c  sequencer.c  usb.c
device/puf/lkr/: 18f2455-application-debug.lkr  18f2455-application.lkr  18f2455-bootloader-debug.lkr  18f2455-bootloader.lkr  18f4550-application-debug.lkr  18f4550-application.lkr  18f4550-bootloader-debug.lkr  18f4550-bootloader.lkr  Makefile.am  Makefile.in  application-18f4550-debug.lkr
device/puf/scripts/: Makefile.am  init_host.sh  usbmon.sh
device/puf/udev/: Makefile.am  README  vasco.rules
device/usb_programmer/hardware/: components.bck  components.dcm  components.lib  power_supply.sch  programmateur_usb.cache.bck  programmateur_usb.cache.lib  programmateur_usb.erc  programmateur_usb.pro  programmateur_usb.sch
host/demo/: .cdtproject  .cvsignore  .project  ChangeLog  Makefile.in  configure  configure.ac
host/demo/src/: .cvsignore  Makefile.am  Makefile.in  main.cxx  usbdevice.cxx  usbdevice.h
host/docker/: .cvsignore  ChangeLog  Makefile.in  configure  configure.ac
host/docker/src/: .cvsignore  DataBuffer.cxx  DataBuffer.h  HexFile.cxx  HexFile.h  HexFile_ihx16.cxx  HexFile_ihx8.cxx  Makefile.am  Makefile.in  main.cxx  usbdevice.cxx  usbdevice.h
host/hpower/: .cvsignore  ChangeLog  README  configure.ac
host/hpower/debian/: changelog  control  copyright  hpower-default  hpower.doc-base.EX  init.d  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  rules
host/hpower/src/: .cvsignore  Makefile.am  main.cxx  usbdevice.cxx  usbdevice.h
odyssey/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  aclocal.m4  configure.ac
odyssey/data/: odyssey.conf  pic.conf
odyssey/doc/: Makefile.am  init_parport.sh  odyssey-man.html  odyssey.1  pic.conf-man.html  pic.conf.5  setup.txt
odyssey/src/: .cvsignore  ConfigFile.cxx  ConfigFile.h  DataBuffer.cxx  Device.cxx  Device.h  DirectPPIO.cxx  DirectPPIO.h  HexFile.cxx  HexFile.h  HexFile_ihx16.cxx  HexFile_ihx8.cxx  IO.cxx  IO.h  LinuxPPDevIO.cxx  LinuxPPDevIO.h  Makefile.am  ParallelPort.cxx  ParallelPort.h  Util.cxx  Util.h  config.h.in  main.cxx
odyssey/src/device/: Pic12f6xxDevice.cxx  Pic16Device.cxx  Pic16f6xx.cxx  Pic16f6xxADevice.cxx  Pic16f6xxDevice.cxx  Pic16f7xDevice.cxx  Pic16f81xDevice.cxx  Pic16f87xADevice.cxx  Pic16f8xxDevice.cxx  Pic18Device.cxx  Pic18f2xx0Device.cxx  PicDevice.cxx  PicDevice.h
